Integration test API -  Create & Get Content
